// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly - input 1`] = `
<DocumentFragment>
  <div>
    <div
      class="css-0"
      data-chakra-component="CBox"
    >
      <!---->
       
      <input
        class="css-0 css-wl0j5d"
        data-chakra-component="CPseudoBox"
        data-testid="input"
        id="editable-1"
        placeholder="Click to edit..."
        value="testing"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div>
    <div
      class="css-0"
      data-chakra-component="CBox"
    >
      <span
        class="css-0 css-1fsaeka"
        data-chakra-component="CPseudoBox"
        data-testid="preview"
        tabindex="0"
      >
        testing
      </span>
       
      <!---->
    </div>
  </div>
</DocumentFragment>
`;
